# MarkII

./: CMakeLists.txt  README.md
src/: Controller.cpp  Controller.h  GenericMotor.h  MarkIIEnvironment.cpp  MarkIIEnvironment.h  MotorManager.h  State.h
test/: CMakeLists.txt  ControllerTest.cpp  ControllerTest.h  GenericMotorTest.cpp  GenericMotorTest.h  MockControllerListener.h  MockMotor.h  MockThrottleControl.h  MotorManagerTest.cpp  MotorManagerTest.h
